# AirEngine

./: .gitignore  CMakeLists.txt  README.md  vcpkg-configuration.json  vcpkg.json  xmake.lua
Demo/: CMakeLists.txt  main.cpp  xmake.lua
Resources/Mesh/: Box.mesh  NdcFullScreen.mesh  NdcFullScreenMesh.ply  NineSphere.mesh
Resources/Shader/: Present.frag  Present.shader  Present.vert  RtTest.shader  Test.shader  _compile.bat
Resources/Texture/: WorkShop_Equirectangular.texture2d
Runtime/: CMakeLists.txt  xmake.lua
Runtime/Asset/: AssetBase.cpp  AssetBase.hpp  Mesh.cpp  Mesh.hpp  Texture2D.cpp  Texture2D.hpp
Runtime/Asset/Loader/: LoadContext.hpp  LoadHandle.hpp  LoaderBase.cpp  LoaderBase.hpp
Runtime/Asset/Manager/: AssetManager.cpp  AssetManager.hpp
Runtime/AssetLoader/: AssetLoadContext.hpp  AssetLoadHandle.hpp  AssetLoaderBase.cpp  AssetLoaderBase.hpp  MeshLoader.cpp  MeshLoader.hpp  ShaderLoader.cpp  ShaderLoader.hpp  Texture2DLoader.cpp  Texture2DLoader.hpp
Runtime/Core/: Bootstrapper.cpp  Bootstrapper.hpp  Context.cpp  Context.hpp  Object.cpp  Object.hpp
Runtime/Core/Boot/: Bootstrapper.cpp  Bootstrapper.hpp  ManagerInitializer.hpp
Runtime/Core/FrontEnd/: DummyWindow.cpp  DummyWindow.hpp  FrontEndBase.cpp  FrontEndBase.hpp  Window.cpp  Window.hpp
Runtime/Core/Manager/: AssetManager.cpp  AssetManager.hpp  FiberManager.cpp  FiberManager.hpp  GraphicDeviceManager.cpp  GraphicDeviceManager.hpp  LogicManager.cpp  LogicManager.hpp  MainManager.cpp  MainManager.hpp  ManagerBase.cpp  ManagerBase.hpp  ManagerInitializer.cpp  ManagerInitializer.hpp  RenderManager.cpp  RenderManager.hpp  SceneManager.cpp  SceneManager.hpp  TaskManager.cpp  TaskManager.hpp  ThirdPartyLibraryManager.cpp  ThirdPartyLibraryManager.hpp
Runtime/Core/Object/: Component.cpp  Component.hpp  Object.cpp  Object.hpp  SceneObject.cpp  SceneObject.hpp  Transform.cpp  Transform.hpp
Runtime/Core/Scene/: Component.cpp  Component.hpp  Scene.cpp  Scene.hpp  SceneObject.cpp  SceneObject.hpp
Runtime/FrontEnd/: DummyWindow.cpp  DummyWindow.hpp  FrontEndBase.cpp  FrontEndBase.hpp  Window.cpp  Window.hpp
Runtime/Graphic/Asset/: Mesh.cpp  Mesh.hpp  Texture2D.cpp  Texture2D.hpp
Runtime/Graphic/Asset/Loader/: MeshLoader.cpp  MeshLoader.hpp  RayTracingMeshLoader.cpp  RayTracingMeshLoader.hpp  ShaderLoader.cpp  ShaderLoader.hpp  Texture2DLoader.cpp  Texture2DLoader.hpp
Runtime/Graphic/AssetLoader/: MeshLoader.cpp  MeshLoader.hpp  ShaderLoader.cpp  ShaderLoader.hpp  Texture2DLoader.cpp  Texture2DLoader.hpp
Runtime/Graphic/Command/: Barrier.cpp  Barrier.hpp  CommandBuffer.cpp  CommandBuffer.hpp  CommandPool.cpp  CommandPool.hpp  Fence.cpp  Fence.hpp  Semaphore.cpp  Semaphore.hpp
Runtime/Graphic/Instance/: Buffer.cpp  Buffer.hpp  FrameBuffer.cpp  FrameBuffer.hpp  Image.cpp  Image.hpp  ImageSampler.cpp  ImageSampler.hpp  ImageView.cpp  ImageView.hpp  Memory.cpp  Memory.hpp  Queue.cpp  Queue.hpp  RenderPassBase.cpp  RenderPassBase.hpp  UniformBuffer.cpp  UniformBuffer.hpp
Runtime/Graphic/Manager/: DescriptorManager.cpp  DescriptorManager.hpp  DescriptorManagerData.cpp  DescriptorManagerData.hpp  DeviceManager.cpp  DeviceManager.hpp  ImageSamplerManager.cpp  ImageSamplerManager.hpp  RenderPassManager.cpp  RenderPassManager.hpp  ShaderManager.cpp  ShaderManager.hpp
Runtime/Graphic/MeshAttributePaser/: MeshAttributePaserBase.cpp  MeshAttributePaserBase.hpp  MeshVertexAttributeInfo.hpp  PositionNormalTangentTexcoord_MeshAttributePaser.cpp  PositionNormalTangentTexcoord_MeshAttributePaser.hpp  Position_MeshAttributePaser.cpp  Position_MeshAttributePaser.hpp
Runtime/Graphic/Rendering/: Material.cpp  Material.hpp  MaterialBindableAssetBase.cpp  MaterialBindableAssetBase.hpp  MaterialData.cpp  MaterialData.hpp  Shader.cpp  Shader.hpp  ShaderData.cpp  ShaderData.hpp
Runtime/Utility/: BitOperationMacro.hpp  ChildBrotherTreeNode.hpp  CollectableObject.cpp  CollectableObject.hpp  Condition.hpp  ContructorMacro.hpp  ExportMacro.hpp  Fiber.hpp  GarbageCollectInclude.hpp  Initializer.hpp  InternedString.cpp  InternedString.hpp  OperationWrapper.hpp  ReflectableObject.cpp  ReflectableObject.hpp  StringToAssimpTypeTransfer.cpp  StringToAssimpTypeTransfer.hpp  StringToVulkanypeTransfer.cpp  StringToVulkanypeTransfer.hpp  ThreadInclude.hpp  VulkanOpenCVTypeTransfer.cpp  VulkanOpenCVTypeTransfer.hpp
