cmake_minimum_required (VERSION 3.25)

if (POLICY CMP0091)
  cmake_policy(SET CMP0091 NEW)
endif (POLICY CMP0091)

if (POLICY CMP0140)
  cmake_policy(SET CMP0140 NEW)
endif (POLICY CMP0140)

set(CMAKE_TOOLCHAIN_FILE $ENV{VCPKG_ROOT}/scripts/buildsystems/vcpkg.cmake)
set(VCPKG_TARGET_TRIPLET x64-windows-static)

function(GROUP_FILES FILE_PATHS)
  message(STATUS "-----GROUP_FILES: START-----")
  message(STATUS "-----CMAKE_CURRENT_SOURCE_DIR: ${CMAKE_CURRENT_SOURCE_DIR}-----")
  message(STATUS "-----foreach: START-----")
  foreach(FILE_PATH ${FILE_PATHS}) 
    get_filename_component(ABSOLUTE_FILE_PATH "${FILE_PATH}" ABSOLUTE)
    message(STATUS "-----ABSOLUTE_FILE_PATH: ${ABSOLUTE_FILE_PATH}-----")
    get_filename_component(ABSOLUTE_FILE_DIRECTORY_PATH "${ABSOLUTE_FILE_PATH}" DIRECTORY)
    message(STATUS "-----ABSOLUTE_FILE_DIRECTORY_PATH: ${ABSOLUTE_FILE_DIRECTORY_PATH}-----")
    string(REPLACE "${CMAKE_CURRENT_SOURCE_DIR}" "" FILE_GROUP "${ABSOLUTE_FILE_DIRECTORY_PATH}")
    message(STATUS "-----FILE_GROUP: ${FILE_GROUP}-----")
    source_group("${FILE_GROUP}" FILES "${FILE_PATH}")
  endforeach()
  message(STATUS "-----endforeach: END-----")
  message(STATUS "-----GROUP_FILES: END-----")
endfunction()

function(GROUP_FILES_BY_DIRECTORY DIRECTORY_PATH FILE_PATHS)
  message(STATUS "-----GROUP_FILES_BY_DIRECTORY: START-----")
  message(STATUS "-----DIRECTORY_PATH: ${DIRECTORY_PATH}-----")
  get_filename_component(ABSOLUTE_DIRECTORY_PATH "${DIRECTORY_PATH}" ABSOLUTE)
  message(STATUS "-----ABSOLUTE_DIRECTORY_PATH: ${ABSOLUTE_DIRECTORY_PATH}-----")
  message(STATUS "-----foreach: START-----")
  foreach(FILE_PATH ${FILE_PATHS}) 
    get_filename_component(ABSOLUTE_FILE_PATH "${FILE_PATH}" ABSOLUTE)
    message(STATUS "-----ABSOLUTE_FILE_PATH: ${ABSOLUTE_FILE_PATH}-----")
    get_filename_component(ABSOLUTE_FILE_DIRECTORY_PATH "${ABSOLUTE_FILE_PATH}" DIRECTORY)
    message(STATUS "-----ABSOLUTE_FILE_DIRECTORY_PATH: ${ABSOLUTE_FILE_DIRECTORY_PATH}-----")
    string(REPLACE "${ABSOLUTE_DIRECTORY_PATH}" "" FILE_GROUP "${ABSOLUTE_FILE_DIRECTORY_PATH}")
    message(STATUS "-----FILE_GROUP: ${FILE_GROUP}-----")
    # string(REGEX REPLACE "^[\\/]+" "" FILE_GROUP ${FILE_GROUP})
    # message(STATUS "-----FILE_GROUP: ${FILE_GROUP}-----")
    source_group("${FILE_GROUP}" FILES "${FILE_PATH}")
  endforeach()
  message(STATUS "-----endforeach: END-----")
  message(STATUS "-----GROUP_FILES_BY_DIRECTORY: END-----")
endfunction()

function(FIND_SOURCE_FILE_PATHS SOURCE_DIRECTORY_PATH RESULT_SOURCE_FILE_PATHS)
  message(STATUS "-----FIND_SOURCE_FILE_PATHS: START-----")
  file(GLOB_RECURSE ALL_HEADER_FILE_PATHS "${SOURCE_DIRECTORY_PATH}/*.hpp")
  message(STATUS "-----ALL_HEADER_FILE_PATHS: ${ALL_HEADER_FILE_PATHS}-----")
  file(GLOB_RECURSE ALL_SOURCE_FILE_PATHS "${SOURCE_DIRECTORY_PATH}/*.cpp")
  message(STATUS "-----ALL_SOURCE_FILE_PATHS: ${ALL_SOURCE_FILE_PATHS}-----")
  set(${RESULT_SOURCE_FILE_PATHS} ${ALL_HEADER_FILE_PATHS} ${ALL_SOURCE_FILE_PATHS})
  message(STATUS "-----RESULT_SOURCE_FILE_PATHS: ${RESULT_SOURCE_FILE_PATHS}-----")
  message(STATUS "-----FIND_SOURCE_FILE_PATHS: END-----")
  return(PROPAGATE ${RESULT_SOURCE_FILE_PATHS})
endfunction()

function(SET_PROJECT_SETTINGS)
  set(CMAKE_CXX_STANDARD 20)

  set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /SUBSYSTEM:CONSOLE")

  add_definitions(-DNOMINMAX)
  add_definitions(-DVULKAN_HPP_DISPATCH_LOADER_DYNAMIC=1)
endfunction()

set(AIR_ENGINE_DIRECTORY_PATH "${CMAKE_SOURCE_DIR}")
set(RUNTIME_DIRECTORY_PATH "${AIR_ENGINE_DIRECTORY_PATH}/Runtime")

project(AirEngine)

add_subdirectory (Runtime)
add_subdirectory (Demo)