cmake_minimum_required (VERSION 3.18)

project (Demo CXX)

SET_PROJECT_SETTINGS()

FIND_SOURCE_FILE_PATHS("${PROJECT_SOURCE_DIR}" DEMO_SOURCE_FILE_PATHS)
GROUP_FILES("${DEMO_SOURCE_FILE_PATHS}")

FIND_AND_GROUP_RUNTIME_SOURCE_FILES(RUNTIME_SOURCE_FILE_PATHS)

set(ALL_SOURCE_FILE_PATHS "${DEMO_SOURCE_FILE_PATHS}" "${RUNTIME_SOURCE_FILE_PATHS}")

include_directories("${RUNTIME_DIRECTORY_PATH}")

add_executable(Demo)
target_sources(Demo PRIVATE "${ALL_SOURCE_FILE_PATHS}")
ADD_RUNTIME_PACKAGES("Demo")

set_property(TARGET Demo PROPERTY MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")