cmake_minimum_required (VERSION 3.25)

project (Demo CXX)

message(STATUS "-----PROJECT_SOURCE_DIR: ${PROJECT_SOURCE_DIR}-----")
FIND_SOURCE_FILE_PATHS(${PROJECT_SOURCE_DIR} DEMO_SOURCE_FILE_PATHS)
message(STATUS "-----DEMO_SOURCE_FILE_PATHS: ${DEMO_SOURCE_FILE_PATHS}-----")
GROUP_FILES("${DEMO_SOURCE_FILE_PATHS}")

# set(ALL_SOURCE_FILE_PATHS "${DEMO_SOURCE_FILE_PATHS}")
# message(STATUS "-----ALL_SOURCE_FILE_PATHS: ${ALL_SOURCE_FILE_PATHS}-----")

FIND_AND_GROUP_RUNTIME_SOURCE_FILES(RUNTIME_SOURCE_FILE_PATHS)
message(STATUS "-----RUNTIME_SOURCE_FILE_PATHS: ${RUNTIME_SOURCE_FILE_PATHS}-----")

set(ALL_SOURCE_FILE_PATHS ${DEMO_SOURCE_FILE_PATHS} ${RUNTIME_SOURCE_FILE_PATHS})
message(STATUS "-----ALL_SOURCE_FILE_PATHS: ${ALL_SOURCE_FILE_PATHS}-----")

include_directories("${AIR_ENGINE_ROOT_DIRECTORY_PATH}")
message(STATUS "-----DEMO_SOURCE_FILE_PATHS: ${AIR_ENGINE_ROOT_DIRECTORY_PATH}-----")

add_executable(Demo)
target_sources(Demo PRIVATE "${ALL_SOURCE_FILE_PATHS}")
ADD_RUNTIME_PACKAGES("Demo")

set_property(TARGET Demo PROPERTY MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")